# operating-systems

cw1/zad1/: CMakeLists.txt  blocks.c  blocks_h.h
cw1/zad2/: CMakeLists.txt  blocks.c  main.c
cw1/zad3a/: CMakeLists.txt  blocks.c  blocks_h.h  main.c  main_dyn.c  results3a.txt
cw1/zad3b/: CMakeLists.txt  blocks.c  main.c  main_dyn.c
cw2/zad1/: CMakeLists.txt  main.c
cw2/zad2/: CMakeLists.txt  main.c
cw3/zad1/: CMakeLists.txt  main.c
cw3/zad2/: file_service.c  file_service.h  main.c  monitor.c  monitor.h  tester.c
cw3/zad3/: CMakeLists.txt  main.c  monitor.c  monitor.h  tester.c
cw4/zad1/: CMakeLists.txt  print_date  zad1a.c  zad1b.c
cw4/zad2/: CMakeLists.txt  file_service.h  main.c  monitor.c  monitor.h
cw4/zad3a/: CMakeLists.txt  catcher.c  file_service.c  file_service.h  sender.c
cw4/zad3b/: CMakeLists.txt  catcher.c  file_service.c  sender.c  signal_helper.c  signal_helper.h
cw5/zad1/: CMakeLists.txt  file_helper.c  file_helper.h  main.c  pipe.c  pipe.h
cw5/zad2/: CMakeLists.txt  file_service.c  master.c  slave.c
cw6/zad1/: CMakeLists.txt  chat.h  client.c  common.c  common.h  server.c
cw6/zad2/: CMakeLists.txt  chat.h  client.c  common.c  common.h  server.c
cw7/zad1/: CMakeLists.txt  belt.c  belt.h  common.c  loader.c  loader.h  main.c  trucker.c  trucker.h
cw7/zad2/: CMakeLists.txt  belt.c  belt.h  common.c  common.h  loader.c  main.c  result.txt  trucker.c
